// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar should render the component with no results 1`] = `
<TabBar
  dispatch={[Function]}
  goToDatasets={[MockFunction]}
  numberOfDataResults={0}
  numberOfDatasetResults={0}
  searchQuery="dam"
/>
`;

exports[`TabBar should render the component with results 1`] = `
<TabBar
  dispatch={[Function]}
  goToDatasets={[MockFunction]}
  numberOfDataResults={204}
  numberOfDatasetResults={120}
  searchQuery="dam"
  showDatasetsButton={true}
/>
`;

exports[`TabBar should render the container 1`] = `
<TabBar
  dispatch={[Function]}
  numberOfDataResults={1}
  numberOfDatasetResults={1}
  searchQuery="dam"
/>
`;
